--- a/tbsetup/batchexp.in
+++ b/tbsetup/batchexp.in
@@ -882,23 +882,25 @@ sub cleanup()
     # Clear the logfile so the webpage stops.
     $experiment->CloseLogFile();
 
-    #
-    # Figure out the error if possible
-    #
-    my $error_data = tblog_find_error();
-
-    #
-    # Send a message to the testbed list. 
-    #
-    tblog_email_error($error_data,
-		      "$user_name <$user_email>",
-		      "Config Failure", "$pid/$eid",
-		      "$user_name <$user_email>",
-		      "",
-		      "Cc: $TBOPS",
-		      "",
-		      ($logname, "assign.log", "wanassign.log", $nsfile));
-
+    if (!$ENV{'TBAUDITON'}) {
+	#
+	# Figure out the error if possible
+	#
+	my $error_data = tblog_find_error();
+	
+	#
+	# Send a message to the testbed list. 
+	#
+	tblog_email_error($error_data,
+			  "$user_name <$user_email>",
+			  "Config Failure", "$pid/$eid",
+			  "$user_name <$user_email>",
+			  "",
+			  "Cc: $TBOPS",
+			  "",
+			  ($logname, "assign.log", "wanassign.log", $nsfile));
+    } 	
+	
     #
     # Back up the work dir for post-mortem debugging. 
     #
