--- a/tbsetup/template_create.in
+++ b/tbsetup/template_create.in
@@ -221,7 +221,7 @@ $eid  = $template->eid();
 #
 # Use the logonly option to audit so that we get a record mailed.
 #
-if (my $childpid = AuditStart(LIBAUDIT_DAEMON, undef, LIBAUDIT_LOGONLY)) {
+if (my $childpid = AuditStart(LIBAUDIT_DAEMON, undef, LIBAUDIT_LOGONLY|LIBAUDIT_FANCY)) {
     #
     # Parent exits normally, unless in waitmode. We have to set
     # justexit to make sure the END block below does not run.
@@ -269,6 +269,13 @@ if (my $childpid = AuditStart(LIBAUDIT_DAEMON, undef, LIBAUDIT_LOGONLY)) {
     
     exit $exit_code;
 }
+
+# Add audit info.  Right now this will only work when called in
+# the child of the script being audited.  Eventually these can be
+# set anywhere.
+AddAuditInfo("which", "$pid/$tid");
+AddAuditInfo("failure_frag", "Template Creation Failure");
+AddAuditInfo("success_frag", "New Template Created");
 
 #
 # We need to catch TERM so we can kill the children and do a cleanup.
