--- a/tbsetup/template_swapin.in
+++ b/tbsetup/template_swapin.in
@@ -218,7 +218,7 @@ if (! ($foreground || $experiment->batchmode())) {
     TBExptOpenLogFile($pid, $eid);
 
     if (my $childpid = AuditStart(LIBAUDIT_DAEMON, $logname,
-				  LIBAUDIT_LOGONLY|LIBAUDIT_NODELETE)) {
+				  LIBAUDIT_LOGONLY|LIBAUDIT_NODELETE|LIBAUDIT_FANCY)) {
 	#
 	# Parent exits normally, unless in waitmode. We have to set
 	# justexit to make sure the END block below does not run.
@@ -280,6 +280,22 @@ if (! ($foreground || $experiment->batchmode())) {
 	exit($? >> 8);
     }
     TBdbfork();
+
+    # Add audit info.  Right now this will only work when called in
+    # the child of the script being audited.  Eventually these can be
+    # set anywhere.
+    AddAuditInfo("which", "$pid/$eid");
+    AddAuditInfo("failure_frag", "T. Swapin Failure");
+    AddAuditInfo("success_frag", "T. Swapped In");
+
+    my $expt_head_login = $experiment->creator();
+    my $expt_head_name;
+    my $expt_head_email;
+    if (UserDBInfo($expt_head_login, \$expt_head_name, \$expt_head_email)) {
+	AddAuditInfo("cc", "$expt_head_name <$expt_head_email>");
+    } else {
+	tbwarn("Could not determine name/email for $expt_head_login.");
+    }
 }
 
 # Event connect before starting swapin so we catch all the states.
