Add "-archive <bool>" to $ns report which controls if "loghole archive" is called.  Creating the archive zipfiles is redundant when using the workbench.  It only serves to wastes space (and time when committing then to the experiment archive).

--- a/tbsetup/ns2ir/sim.tcl.in
+++ b/tbsetup/ns2ir/sim.tcl.in
@@ -1662,10 +1662,15 @@ Simulator instproc make_event {outer event} {
 		    set etype REPORT
 		    ::GLOBALS::named-args $evargs {
 			-digester {}
+			-archive {}
 		    }
 		    if {$(-digester) != {}} {
 			set args "DIGESTER={$(-digester)}"
 		    }
+		    if {$(-archive) != {}} {
+			set args "ARCHIVE={$(-archive)} ${args}"
+		    }
+		    
 		}
 		"snapshot" {
 		    set otype SIMULATOR
