Add fix for:   *** WARNING: batch_daemon:   ***   dblog failed: Can't bless non-reference value at   ***   /usr/testbed/lib/libdb.pm line 299. which was caused by trying the blass an undefined value which is happens when Mysql->connect failed.

--- a/db/libdb.pm.in
+++ b/db/libdb.pm.in
@@ -299,6 +299,7 @@ else {
     }
     sub MakeA ( $ ) {
 	my ($obj) = @_;
+	return unless defined $obj;
 	bless ($obj);
 	$DB_PID{obj_hash($obj)} = $$;
     }
