Location of datastore is not "exp/datastore" not "datastore" in exparchive.  Update Template::Instance::CopyDataStore to reflect this.

--- a/tbsetup/Template.pm.in
+++ b/tbsetup/Template.pm.in
@@ -2814,7 +2814,7 @@ sub CopyDataStore($$$;$)
     libArchive::TBCheckoutExperimentArchivebyExptIDX($exptidx,
 						     $to_path,
 						     $archive_tag,
-						     "datastore")
+						     "exp/datastore")
 	== 0 or return -1;
     
     return 0;
