New front page text, for the first time in a few years. More clearly enumerates the different experimental environments we support. Most of the new text only gets displayed at Utah, since no one else has wireless nodes, etc. Other sites get some short generic text.
New banner, plus other visual tweaks. The new banner is turned on via
the new @FANCYBANNER@ autoconf variable. This is turned on for
TBMAINSITE, but defaults to off for other sites. This is so that
existing sites which already have their own versions of the old banner
don't have to update them right away.

Made the usage iframe a little less prominent, by darkening it, and
making it ever so slightly transparent on browsers that support it.

Some minor visual tweaks to the background and content area.

Added specific IDs for the main menu subgroups so that if we want, we
can style them differently.

Man, IE is a pain in the ass.

--- a/configure.in
+++ b/configure.in
@@ -117,6 +117,7 @@ AC_SUBST(TBCOOKIESUFFIX)
 AC_SUBST(TBAUTHDOMAIN)
 AC_SUBST(TBAUTHTIMEOUT)
 AC_SUBST(TBMAINSITE)
+AC_SUBST(FANCYBANNER)
 AC_SUBST(SFSSUPPORT)
 AC_SUBST(ELABINELAB)
 AC_SUBST(OUTERBOSS_NODENAME)
@@ -207,6 +208,7 @@ CLIENT_VARDIR="/var/emulab"
 CLIENT_MANDIR="/usr/local/man"
 TBSECURECOOKIES=1
 TBMAINSITE=0
+FANCYBANNER=0
 JAILIPBASE=172.16.0.0
 JAILIPMASK=255.240.0.0
 IPBASE=10
@@ -708,6 +710,12 @@ esac]
 AC_PATH_PROG(RSYNC, rsync, "", [${PATH}])
 if test x"$RSYNC" = x"" || test ! -x "$RSYNC"; then
     AC_MSG_WARN([Rsync is required for logholes to work, see www.rsync.org.])
+fi
+
+# Turn on the new fancy banner - normally turned on only at Utah, but
+# overridable for other sites
+if test "$TBMAINSITE" = 1; then
+    FANCYBANNER=1
 fi
 
 outfiles="$outfiles Makeconf GNUmakefile \
