--- a/www/defs.php3.in
+++ b/www/defs.php3.in
@@ -57,6 +57,7 @@ $TBAUTHTIMEOUT  = "@TBAUTHTIMEOUT@";
 $TBMAINSITE     = "@TBMAINSITE@";
 $TBSECURECOOKIES= "@TBSECURECOOKIES@";
 $TBCOOKIESUFFIX = "@TBCOOKIESUFFIX@";
+$FANCYBANNER    = "@FANCYBANNER@";
 
 $TBWWW_DIR	= "$TBDIR"."www/";
 $TBBIN_DIR	= "$TBDIR"."bin/";
