Fix a dumb mistake in an error message, where I put '%' in the format string instead of '%i.
Also, build libnetmon with debugging symbols so that if we are able to
make it dump core, we can hopefully find out useful information.

--- a/pelab/libnetmon/GNUmakefile
+++ b/pelab/libnetmon/GNUmakefile
@@ -7,7 +7,7 @@
 SYSTEM :=	$(shell uname -s)
 
 # I like using -pedantic, but it gives us some trouble with function pointers
-CFLAGS=-Wall -Werror -std=c99
+CFLAGS=-Wall -Werror -std=c99 -g
 
 ifeq ($(SYSTEM),Linux)
     LD_FLAGS=-ldl
